# CacheProject

./: .gitmodules  CMakeLists.txt  README.md
include/: CachePolicy.h  DummyCache.h
modules/: CMakeLists.txt
src/: BenchCache.c  CachePolicy.c  CalculateMisses.c  CalculateMisses.h  DummyCache.c  NumHits.c  adapter.sh
src/demo/: CMakeLists.txt  demo.c
test/: genLoop.py  genNormal.py  genRandom.py  genTemporal.py  plot.py
